<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city">Cidade</string>
    <string name="date">Data</string>
    <string name="temperature">Temperatura</string>
    <string name="temp">20</string>
    <string name="temp_c">°C</string>
    <string name="Cloudy">Nublado</string>
    <string name="wind_speed">Velocidade do vento</string>
    <string name="precipitation">Precipitação</string>
    <string name="visibility">Visibilidade</string>
    <string name="uv">UV</string>
    <string name="min_max">Min/Max</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_7_days">7 days</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
</resources>